<resources>
    <string name="line">--</string>
    <string name="select_mutisig">Select multi-sig wallet</string>
    <string name="prompt_message">Please confirm info below on OneKey before tapping "OK" button</string>
    <string name="multi_type" translatable="false">2-3</string>
    <string name="set_PIN">Please set the PIN code against the OneKey display</string>
    <string name="creat_bixinkey">Needs to bind 3 OneKeys, and any of the 3 devices can be used for transactions</string>
    <string name="bixinkey_walt">OneKey Hardware Wallet</string>
    <string name="set_bixinkey">Set number of OneKeys</string>
    <string name="have_bixinkey">Mutual managers do not own OneKey?</string>
    <string name="bixinkey_backups">OneKey backup recovery</string>
    <string name="bixinkey_manage">OneKey Management</string>
    <string name="input_bixinkey_text">Enter the OneKey backup text</string>
    <string name="bixinkey_fit">Make phone touch OneKey closely</string>
    <string name="please_backups">Please backup OneKey</string>
    <string name="backuped_key">Backed up OneKey</string>
    <string name="backup_bixinkey">Back up OneKey</string>
    <string name="key_qrspr">OneKey-QRSPR backup information</string>
    <string name="bixinkey_backup">Restoring from a OneKey Backup</string>
    <string name="duizhao_pin">Please refer to PIN code backed up by OneKey</string>
    <string name="bixinkey_import">Please import through OneKey</string>
    <string name="import_tips1">1. Public information of a wallet can be obtained by searching the public key associated with the wallet saved in OneKey on Bixin\'s server</string>
    <string name="import_tips">3. The imported wallet needs to be used with OneKey.</string>
    <string name="one_one">1–1</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="lnbcdfd4fdsk">aksdhkjdakjldkajsliieihdihsdkjsjda</string>
    <string name="_BTC">BTC</string>
    <string name="mbtc_0_001_btc">mBTC=0.001BTC</string>
    <string name="bits_btc">bits=0.000001BTC</string>
    <string name="sat_0_00000001_btc">sat=0.00000001BTC</string>
    <string name="begin_num1">1</string>
    <string name="text_5">5</string>
    <string name="btc_c">BTC</string>
    <string name="cny">CNY</string>
    <string name="TestNet">TestNet</string>
    <string name="RegTest">RegTest</string>
    <string name="reading_exception">OneKey reading error</string>
    <string name="tip_ble">Turn on OneKey, and put it close to your phone</string>
    <string name="tip_ble_bonding">Please turn on OneKey, and confirm pairing code</string>
    <string name="str_0_00">0.00</string>
    <string name="lunch_invalid_text">2020 ©BIXIN GLOBAL Co.,Ltd</string>
    <string name="bixinkey_orspr">OneKey-ORSPR</string>
    <string name="_55">55%</string>
    <string name="ip">IP</string>
    <string name="signature_need_min">2</string>
    <string name="cosinger_number_min">2</string>
    <string name="signature_need_max">15</string>
    <string name="number_1">1</string>
    <string name="use_bluetooth_line">Connecting to OneKey using Bluetooth</string>
    <string name="bluetooth_tips">Once Bluetooth is turned off, the hardware wallet will not support Bluetooth access and must be turned on again via usb/nfc.</string>
    <string name="key_backup">OneKey backup &#38; restore</string>
    <string name="band_bixinkey">Bound OneKey</string>
    <string name="backup_message">OneKey-QWE Backup Information</string>
    <string name="fit_key">Please fit the OneKey hardware to your phone</string>
    <string name="fit_key_warning">Don\'t take away your phone during OneKey\'s upgrade</string>
    <string name="please_confirmKEY">Please confirm new PIN code on OneKey</string>
    <string name="set_to_Bixinkey">Set to OneKey</string>
    <string name="_0_0">0/0</string>
    <string name="key_check">Wallets containing OneKey public keys have been searched by OneKey, please select and import</string>
    <string name="verifying_firmware">OneKey is the official firmware of OneKey.</string>
    <string name="contact_service">OneKey may have been tampered with, please contact the seller to deal with it</string>
    <string name="hide_wallet_know_tips">The hidden wallet does not record any data in the app and requires a OneKey connection and a special PIN code to unlock it when using it</string>
    <string name="create_hide_wallet_tips">To create a hidden wallet, use an activated OneKey</string>
    <string name="default_key">Key</string>
    <string name="promote_message">Please confirm the  pin code on the hardware \n 2. Please remember the password displayed by OneKey</string>
    <string name="update_file_format_error">Upgrade file should end with. zip or .bin</string>
    <string name="addspeed_success">Acceleration completed!</string>
    <string name="key_wrong_prompte">Please keep your phone close to the OneKey during the reading process</string>
    <string name="communicating">Communicating with OneKey</string>
    <string name="tip_closer">Data transmissing. Please keep OneKey close to the phone</string>
    <string name="waitting_touch">Pending for OneKey</string>
    <string name="connectting_successful">OneKey connected successfully</string>
    <string name="active_failed">OneKey activation failed, please try again</string>
    <string name="confirm_pin_on_hardware">Please confirm the PIN on OneKey and complete the activation</string>
    <string name="label">Set OneKey\'s proprietary name</string>
    <string name="random">The wallet private key is randomly generated by OneKey</string>
    <string name="recovery_promote">Restore an existing wallet from OneKey backup</string>
    <string name="pin_change_confirm">Please complete the modification and confirm the new PIN code on OneKey</string>
    <string name="unpair">Current OneKey does not have permission to sign this transaction</string>
    <string name="try_another_key">Please change to the correct OneKey for signing</string>
    <string name="use_bixinkey">Device is not a OneKey. Please use OneKey for signatures</string>
    <string name="testnet">OneKey T</string>
    <string name="_0_16">0/16</string>
    <string name="reset_device_failed">OneKey failed to restore factory settings</string>
    <string name="ip_port">39.105.86.163:8080</string>
    <string name="input_key_pass">Please enter the password for the backup is OneKey display</string>
    <string name="set_pin_confirm">Please confirm the new PIN on OneKey</string>
    <string name="BixinKey">OneKey</string>
    <string name="check_key_name">OneKey Name:</string>
    <string name="input_history_wallet">History wallets that have been created with OneKey and can be <font color="#6182F5"> import immediately</font></string>
    <string name="star">****</string>
    <string name="band_key">OneKeys. Use any one of them to authorize transactions. Setting multiple OneKeys as backup will keep your assets from being lost due to losing the only OneKey</string>
    <string name="confirm_finish">Please confirm and complete the operation on OneKey</string>
    <string name="reset_device_successful">Please confirm and complete the rest of the process on OneKey</string>
    <string name="cny_star">≈****</string>
    <string name="recovery_new_key">Restore to the new OneKey</string>
    <string name="key_lite">Fitting the phone to the OneKey Lite</string>
    <string name="backup_finish_tips">OneKey private key seed has been encrypted with PIN code and saved to local machine, please check in 【Settings - OneKey Backup】; please remember the current PIN code.</string>
    <string name="backup_content">Saving PIN code by other means.
\n 1. View and save the backup file to other devices through 【Settings - OneKey Backup】.
\n 2. Back up to a new OneKey so that multiple OneKeys have the same private key.</string>
    <string name="bixinkey_lite">Backing up to OneKey Lite</string>
    <string name="nfc">NFC</string>
    <string name="sat_byte">sat/byte</string>
    <string name="key">OneKey</string>
    <string name="zero">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">￥ 0.00</string>
    <string name="_00">≈ $ 0</string>
    <string name="_1">1</string>
    <string name="eth">ETH</string>
    <string name="eos">EOS</string>
    <string name="hd">HD</string>
    <string name="fee_per_byte_sat_b">Fee per byte (sat/b)</string>
    <string name="size_byte">Size(byte)</string>
    <string name="_0_00_btc">0.00 BTC</string>
    <string name="_0_00_eth">0.00 ETH</string>
    <string name="_0_dollar">$0</string>
    <string name="coin_eos">EOS</string>
    <string name="usb">USB</string>
    <string name="use_center">At least one of the people</string>
    <string name="limited_edition">OneKey - Bixin Limited Edition</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+ " &#139; &#155; &#64; &#38;</string>
    <string name="lable">lable</string>
    <string name="money_sign">≈ ¥ %s</string>
    <string name="app_name">OneKey</string>
    <string name="settings">Settings</string>
    <string name="message_manager">Message Manager</string>
    <string name="language">Language</string>
    <string name="server_setting">Network</string>
    <string name="transaction_setting">Trading Setup</string>
    <string name="service_online">Online Service</string>
    <string name="about">About (Terms of Agreement)</string>
    <string name="zh_simple">Chinese (Simplified)</string>
    <string name="zh_traditional">Traditional Chinese</string>
    <string name="en">English</string>
    <string name="korean">Korean</string>
    <string name="japanese">Japanese</string>
    <string name="arrows">Left Arrow</string>
    <string name="hardware_i">Hardware Information</string>
    <string name="seq">Device ID</string>
    <string name="hardware">Firmware Version</string>
    <string name="hardware_v">Hardware Version (Upgrade)</string>
    <string name="address">Address</string>
    <string name="rbf">Use RBF (Transaction Substitution)</string>
    <string name="use_unconfirmed">Spend Unconfirmed Input</string>
    <string name="use_change">Use Change Address</string>
    <string name="boot_message">I\'ve read and agreed to (Agreement)</string>
    <string name="create">Create Wallet</string>
    <string name="import_w">Multi-institution Vaults</string>
    <string name="active">Activated as a new device</string>
    <string name="prompt_touch">Make hardware wallet touch the phone</string>
    <string name="touch_fail">Connection failed, please check if the settings are correct</string>
    <string name="retry">Retry</string>
    <string name="confirm_pin">Please enter the security password you set again</string>
    <string name="touch_again">Keep hardware wallet touch with phone</string>
    <string name="connect">Hardware connection succeed</string>
    <string name="set_pin_processinfo">Pin code set succeed</string>
    <string name="activing_processinfo">Activating device</string>
    <string name="back">Back</string>
    <string name="success">Activation succeed</string>
    <string name="import_mutiSig">Import multi-sign wallet</string>
    <string name="method_one">Method 1: Using hardware device</string>
    <string name="recommend">Avg</string>
    <string name="no_records">No record</string>
    <string name="finish">Complete</string>
    <string name="upgrading_hardware">Firmware updating</string>
    <string name="hd_wallet">HD Wallet</string>
    <string name="title_select_account">选择账户</string>
    <string name="upgrading_tip">为避免设备重置，升级期间请勿离开 OneKey App，并确保硬件钱包始终处于解锁状态。</string>
    <string name="download_ble">下载蓝牙固件</string>
    <string name="install_ble">安装蓝牙固件</string>
    <string name="download_firmware">下载系统固件</string>
    <string name="install_firmware">安装系统固件</string>
</resources>