<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:minHeight="600dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bg_bottom_sheet">

        <ImageView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/img_sheet_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_ios_bottom_sheet"/>

        <RelativeLayout
                app:layout_constraintTop_toBottomOf="@+id/img_sheet_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/title_select_account"
                    android:textColor="@color/text"
                    android:textSize="@dimen/sp_20"/>

        </RelativeLayout>

        <View
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:background="@color/line_color"/>

        <View
                android:id="@+id/view1"
                app:layout_constraintStart_toEndOf="@+id/recycler_coin_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                android:layout_width="@dimen/line_hight"
                android:layout_height="0dp"
                android:background="@color/line_color"/>

        <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/recycler_coin_list"
                android:layout_width="64dp"
                android:layout_height="0dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_select_coin_logo"/>

        <LinearLayout
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view1"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:id="@+id/recl_wallet"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_52"
                android:layout_marginBottom="@dimen/dp_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/text_wallet_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_15"
                    android:text="@string/hd_wallet"
                    android:textColor="@color/text"
                    android:textSize="@dimen/sp_16"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/recl_wallet"
                app:layout_constraintStart_toStartOf="@+id/recl_wallet"
                app:layout_constraintTop_toBottomOf="@+id/recl_wallet"
                android:id="@+id/recl_wallet_list"
                android:minHeight="240dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_select_account"/>

        <TextView
                app:layout_constraintBottom_toBottomOf="@+id/recl_wallet_list"
                app:layout_constraintEnd_toEndOf="@+id/recl_wallet_list"
                app:layout_constraintStart_toStartOf="@+id/recl_wallet_list"
                app:layout_constraintTop_toTopOf="@+id/recl_wallet_list"
                android:id="@+id/tet_None"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:gravity="center"
                android:text="@string/no_records"
                android:textColor="@color/light_text"
                android:textSize="@dimen/text_size"
                android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
